app/assets/stylesheets/navbar.css
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 59px;
  padding: 18px 20px;
  background-color: #e5dccf;
  border-bottom: 2px solid #243e2e;
}

header div {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

header div:nth-child(1) {
  margin-right: 20px;
}

#logo {
  font-size: 20px;
  font-family: "Clash Display Variable", sans-serif;
  height: 25px;
  font-weight: 500;
  line-height: 25px;
  text-decoration: none;
  color: #243e2e;
  position: relative;
}

#beta {
  border: 1px solid #a94c2e;
  padding: 4px 9px 3px 9px;
  color: #a94c2e;
  position: absolute;
  left: 150px;
}

#burger {
  height: 23px;
  width: 38px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  background: none;
  border: none;
  z-index: 999;
}

#burger.active {
  position: fixed;
  right: 20px;
}

#burger.active span:nth-child(1) {
  transform: translateY(15px) rotate(45deg);
}

#burger.active span:nth-child(2) {
  opacity: 0;
}

#burger.active span:nth-child(3) {
  transform: translateY(-5px) rotate(-45deg);
}

#burger span {
  background: #243e2e;
  width: 38px;
  height: 2px;
  display: block;
}

#search-wrapper {
  display: none;
  border-bottom: 1px solid black;
  background-color: transparent;
  background-color: #e5dccf;
}

#search-form {
  display: flex;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 15px;
  padding-bottom: 15px;
}

#search-field {
  background-color: transparent;
  width: 100%;
  border: none;
}

#search-field:focus {
  outline: none;
}

#search-results {
  padding-left: 20px;
  border-top: 1px solid #243e2e;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.search-results-link {
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom: 1px solid gray;
  text-decoration: none;
  color: black;
}

#search-icon {
  height: 29.33333396911621px;
  width: 24px;
}

.extend {
  z-index: 999;
  display: block !important;
  position: absolute;
  top: 61px;
  left: 2px;
  right: 2px;
  width: calc(100% - 4px);
}

nav {
  display: flex;
}

#nav-menu {
  position: fixed;
  overflow: hidden;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 2px solid #243e2e;
  background-color: #e5dccf;
  z-index: 999;
  padding-top: 90px;
  padding-bottom: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  list-style-type: none;

}



 

#nav-menu a {
  text-decoration: none;
  font-size: 20px;
  font-weight: 400;
  line-height: 25px;
  display: flex;
  align-items: center;
}

#add-place-link {
  color: #243e2e;
}

#sign-in-link {
  height: 60px;
  width: 184px;
  color: #e5dccf;
  border: 2px solid #262626;
  color: #e5dccf;
  background-color: #a94c2e;
  text-decoration: none;
  font-size: 20px;
  font-weight: 400;
  line-height: 25px;

  padding: 17.5px 30px;
  justify-content: space-between;
}

#nav-menu.hidden {
  display: none;
}

#close-button {
  position: absolute;
  top: 0;
  right: 0;
  height: 59px;
  width: 59px;
  background-color: #e5dccf;
  border: none;
  z-index: 999;
}

#close-button span {
  position: absolute;
  top: 50%;
  left: 50%;
  height: 2px;
  width: 20px;
  background-color: #243e2e;
}

#close-button span:nth-child(1) {
  transform: translate(-50%, -50%) rotate(45deg);
}

#close-button span:nth-child(2) {
  transform: translate(-50%, -50%) rotate(-45deg);
}

.hidden {
  display: none;
}

